fix the issues of "bug" type found by SonarQube.