@@ -32,12 +32,12 @@ public final class AstInteger extends SimpleNode {
         super(id);
     }
 
-    private volatile Number number;
+    private Number number;
 
     protected Number getInteger() {
         if (this.number == null) {
             try {
-                this.number = new Long(this.image);
+                this.number = Long.valueOf(this.image);
             } catch (ArithmeticException e1) {
                 this.number = new BigInteger(this.image);
             }
@@ -45,13 +45,13 @@ public final class AstInteger extends SimpleNode {
         return number;
     }
 
-    
+    @Override
     public Class<?> getType(EvaluationContext ctx)
             throws ELException {
         return this.getInteger().getClass();
     }
 
-    
+    @Override
     public Object getValue(EvaluationContext ctx)
             throws ELException {
         return this.getInteger();
